# agent-observation-hub

./: .env.example  .gitignore  NEXT_STEPS.md  README.md  pyproject.toml
app/: agent_event_views.py  analysis_bundle.py  config.py  main.py  observation_tailer.py  payload_diff_view.py  payloads.py  pi_session_reader.py  stage_diff.py  user_analysis_bundle.py
config/: agent_event_roots.example.json
docs/: acceptance_tests.md  agent_event_importers_spec.md  analysis_bundle_api.md  audit_report.md  evaluation_matrix.md  ingress_route_operations.md  litellm_optional_upstream_spec.md  open_source_landscape.md  phase2_1_ingress_route_mapping_spec.md  phase2_correlation_spec.md  phase2_evaluation.md  subject_query_api.md  ui_payload_policy_spec.md  user_analysis_bundle_api.md
scripts/: add_ingress_route.py  backfill_running_runs.py  dev.sh  init_db.sh  tail_hermes_logs.sh  tail_openclaw_logs.sh
tests/: conftest.py  functional_overlay.md  test_agent_event_importers.py  test_agent_events.py  test_analysis_bundle.py  test_assertions_api.py  test_backfill_runs.py  test_chat_overlays.py  test_config.py  test_constraints.py  test_correlations.py  test_ids.py  test_ingress_route_cli.py  test_ingress_routes.py  test_no_litellm_dependency.py  test_openai_proxy_errors.py  test_openai_proxy_non_stream.py  test_openai_proxy_stream.py  test_overlay_snapshot.py  test_payload_diff_view.py  test_raw_store.py  test_redaction.py  test_security_redaction.py  test_session_messages.py  test_stage_diff.py  test_subjects_api.py  test_trace_api.py  test_ui.py  test_user_analysis_bundle.py
(+54 files in other folders)
